--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
+    <!-- 指定文档使用的字符编码为UTF-8 -->
     <meta charset="UTF-8" />
+    <!-- 设置网页图标，图标类型为SVG，图标文件路径为/vite.svg -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- 设置视口，确保网页在不同设备上能够正确显示，宽度为设备宽度，初始缩放比例为1.0 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 设置网页标题为Income Tracker -->
     <title>Income Tracker</title>
   </head>
   <body class="bg-gray-100">
+    <!-- 定义一个id为root的div，用于挂载React应用 -->
     <div id="root"></div>
+    <!-- 引入一个TypeScript模块，路径为/src/main.tsx，用于启动React应用 -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
